--- a/Code/AppParqueadero/src/VistaVendedor/Vendedores.form
+++ b/Code/AppParqueadero/src/VistaVendedor/Vendedores.form
@@ -26,14 +26,8 @@
               <Group type="103" groupAlignment="1" max="-2" attributes="0">
                   <Component id="jScrollPane1" alignment="1" max="32767" attributes="0"/>
                   <Group type="102" alignment="1" attributes="0">
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Group type="102" attributes="0">
-                              <Component id="jButton4" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
-                              <Component id="inputBuscarUpdate" min="-2" pref="167" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btnBuscarUpdateSeller" min="-2" pref="198" max="-2" attributes="0"/>
-                          </Group>
+                      <Group type="103" groupAlignment="1" attributes="0">
+                          <Component id="jButton4" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="inputBuscar" min="-2" pref="318" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -58,13 +52,9 @@
                   <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="inputBuscar" alignment="3" pref="27" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="inputBuscarUpdate" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
-                  <Component id="btnBuscarUpdateSeller" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-                  <Component id="jButton4" alignment="3" min="-2" pref="29" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+              <Component id="jButton4" min="-2" pref="29" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="154" max="-2" attributes="0"/>
               <EmptySpace pref="10" max="32767" attributes="0"/>
           </Group>
@@ -118,25 +108,6 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JTextField" name="inputBuscarUpdate">
-    </Component>
-    <Component class="javax.swing.JButton" name="btnBuscarUpdateSeller">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="72" green="3b" red="49" type="rgb"/>
-        </Property>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="1"/>
-        </Property>
-        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value=" EDITAR VENDEDOR"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarUpdateSellerActionPerformed"/>
-      </Events>
-    </Component>
     <Component class="javax.swing.JTextField" name="inputBuscar">
     </Component>
     <Component class="javax.swing.JButton" name="btnBuscarSeller">
