--- a/Code/AppParqueadero/src/VistaVendedor/Vendedores.form
+++ b/Code/AppParqueadero/src/VistaVendedor/Vendedores.form
@@ -27,7 +27,7 @@
                   <Component id="TituloInformativo" min="-2" max="-2" attributes="0"/>
                   <Component id="jScrollPane1" alignment="0" min="-2" pref="624" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="10" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
