--- a/Code/AppParqueadero/src/Main/Entrada.form
+++ b/Code/AppParqueadero/src/Main/Entrada.form
@@ -40,13 +40,13 @@
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="inputPlaca" min="-2" pref="215" max="-2" attributes="0"/>
-                          <Component id="inputVehiculo1" min="-2" pref="215" max="-2" attributes="0"/>
-                          <Component id="inputVehiculo" alignment="0" min="-2" pref="215" max="-2" attributes="0"/>
+                          <Component id="inputVehiculo" min="-2" pref="215" max="-2" attributes="0"/>
+                          <Component id="inputTitular" alignment="0" min="-2" pref="215" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace pref="175" max="-2" attributes="0"/>
-                      <Component id="btnModificarTarifa" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnEntrada" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -69,20 +69,20 @@
                   <Group type="102" attributes="0">
                       <Component id="inputPlaca" min="-2" pref="27" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Component id="inputVehiculo1" min="-2" pref="27" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                       <Component id="inputVehiculo" min="-2" pref="27" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                      <Component id="inputTitular" min="-2" pref="27" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="btnModificarTarifa" min="-2" pref="29" max="-2" attributes="0"/>
+              <Component id="btnEntrada" min="-2" pref="29" max="-2" attributes="0"/>
               <EmptySpace pref="165" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="btnModificarTarifa">
+    <Component class="javax.swing.JButton" name="btnEntrada">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="72" green="3b" red="49" type="rgb"/>
@@ -96,7 +96,7 @@
         <Property name="text" type="java.lang.String" value="INGRESAR"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnModificarTarifaActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEntradaActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="inputPlaca">
@@ -104,14 +104,14 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputPlacaActionPerformed"/>
       </Events>
     </Component>
+    <Component class="javax.swing.JTextField" name="inputTitular">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputTitularActionPerformed"/>
+      </Events>
+    </Component>
     <Component class="javax.swing.JTextField" name="inputVehiculo">
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputVehiculoActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JTextField" name="inputVehiculo1">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputVehiculo1ActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabelPlaca">
